@@ -1,3 +1,5 @@
+2008年 02月 21日 星期四 00:45:45 CST lerosua
+	给TalkFT添加了接收线程。
 2008年 02月 20日 星期三 15:45:13 CST lerosua
 	更新TalkFT类到gloox 1.0系列
 	
